# evoting-demonstrator

./: .envrc  .gitignore  LICENSE  Makefile  README.md  lib
docker-tevdcompile/: Dockerfile  install_cakeml.sh  install_hol4.sh  install_polyml.sh  test.sh
docker-xenial-arm-gnueabi-gcc4.7/: Dockerfile
documentation/: change_of_size.txt  documentation.tex  overview.odg
evoting-demonstrator/: .editorconfig  .gitignore  .holpath  LICENSE  Makefile  Makefile.ubuntucheck  README.md
evoting-demonstrator/base64/: Base64ModuleProgScript.sml  Holmakefile  README.md  base64Module.cml  base64Prog.cml
evoting-demonstrator/c_crypto_lib/: Makefile  keys.h  mycrypto.c  opensslcrypto.c  wolfsslcrypto.c
evoting-demonstrator/crosscompile/: Makefile  README.md  cake_guest.ld  compilation.sh  newlib_params.c  print.c  start.S
evoting-demonstrator/deser/: README.md  bytesScript.sml  serialiseLib.sig  serialiseLib.sml  serialiseScript.sml
evoting-demonstrator/emulation/: Makefile  basis_ffi_emulation.c  emulation.c  invoke_cakeml.c
evoting-demonstrator/ffi/: README.md  cryptffilib.cml  functionslib.cml  tevdlib.cml
evoting-demonstrator/freja/: README.md  authentication.sh  freja-signing.pub  signing.sh  verifyauth.sh
evoting-demonstrator/json/: Holmakefile  JsonModuleProgScript.sml  Makefile  README.md  jsonModule.cml  jsonProg.cml
evoting-demonstrator/message-chart/: Makefile  freja-sign.latex  freja-sign.txt  freja.latex  freja.txt  verificatum.latex  verificatum.txt
evoting-demonstrator/rust_app_lib/: Cargo.toml
evoting-demonstrator/rust_app_lib/src/: config.rs  deserialise.rs  lib.rs  select.rs  socket.rs
evoting-demonstrator/rust_client_server/: Cargo.toml  README.md  test.sh
evoting-demonstrator/rust_client_server/src/: lib.rs  main.rs
evoting-demonstrator/rust_crypto_lib/: Cargo.toml
evoting-demonstrator/rust_crypto_lib/src/: crypto.rs  lib.rs
evoting-demonstrator/rust_min_app/: Cargo.toml  Makefile  run.sh
evoting-demonstrator/rust_min_app/src/: cli.rs  deserialise.rs  lib.rs  select.rs
evoting-demonstrator/rust_premix_server/: Cargo.toml  Makefile  README.md
evoting-demonstrator/src/: Holmakefile  README.md  byteTreeScript.sml  cdnStateScript.sml  clientStateScript.sml  election.v  electionScript.sml  electionSystemScript.sml  executionScript.sml  formatCryptoScript.sml  formatScript.sml  mixnetStateScript.sml  networkScript.sml  signatureScript.sml  systemScript.sml  vcsStateScript.sml
evoting-demonstrator/test_assets/: README.md  functions.sh  new_signed_vote.json  signed_vote.json  verifysign.sh
evoting-demonstrator/tests/: README.md  (+15 more)
hypervisor/: .gitignore  Makefile  README.rst  target  target.bak  to_commit.sh
hypervisor-cakeml/: .gitignore  README.md
linux-5.15.13/: config_backup  rootfs.cpio  to_commit.sh
sources/: S60confnet.sh  buildroot-config  hypervisor.linux-config  run.sh
(+244 files in other folders)
