[package]
name = "rust_client_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deser_lib = { path = "../deser/deser_lib/" }
rust_app_lib = { path = "../rust_app_lib/" }
httparse = "1.8.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
urlencoding = "2.1.3"
base64 = "0.21.7"

