[package]
name = "rust_crypto_lib"
version = "0.1.0"
edition = "2021"
authors = ["Arve Gengelbach <arveg@kth.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacspec-lib       = { path = "../hacspec/lib", default-features = false, features = ["alloc"] }
hacspec-sha256    = { path = "../hacspec/examples/sha256/", default-features = false }
hacspec-rsa-pkcs1 = { path = "../hacspec/examples/rsa-pkcs1/", default-features = false }

[lib]
crate-type = ["staticlib", "lib"]

